Se hizieron cambios en la app

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,6 +27,15 @@ services:
       - NODE_ENV=production
     networks:
       - intranet
+  nextjs-dev:
+    container_name: portafolio-dev
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    ports:
+      - 3000:3000
+    environment:
+      - NODE_ENV=dev
 networks:
   intranet:
     driver: bridge
